<resources>
    <string name="app_name">WanAndroid</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="login_text_username">用户名</string>
    <string name="login_text_password">密码</string>
    <string name="login_text_repassword">确认密码</string>
    <string name="login_text_login_hint">没有账号？去注册</string>
    <string name="login_text_register_hint">已有账号？去登录</string>
    <string name="login_text_login">登录</string>
    <string name="login_text_register">注册</string>
    <string name="loading_text_reloading">重新加载</string>
    <string name="loading_text_default_error_msg">加载失败啦</string>
    <string name="main_text_tab_home">首页</string>
    <string name="main_text_tab_knowledge">知识</string>
    <string name="main_text_tab_wechat">公众号</string>
    <string name="main_text_tab_naivagation">导航</string>
    <string name="main_text_tab_project">项目</string>
</resources>
